# jira-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  HELM-DEPLOYMENT.md  K8S-DEPLOYMENT.md  README.md  docker-compose.yml  justfile  k8s-deployment-only.yaml  k8s-deployment.yaml  k8s-secrets.yaml  main.py  pyproject.toml
app/: assignee_service.py  component_service.py  components.py  config.py  crypto_service.py  database_service.py  epic_service.py  issue_type_service.py  issue_types.py  jira_service.py  llm_service.py  sprint_service.py  telegram_bot.py  users.py
db/: create-table-jira_issue_details.sql  create-table-jira_issues.sql  create-table-jira_statuses.sql  create-table-user_tokens.sql  migrate-jira_issue_details.py
helm/jira-bot/: Chart.yaml  values.yaml
helm/jira-bot/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/jira-bot/templates/tests/: test-connection.yaml
scripts/: next_rc_version.py
tests/: conftest.py  test_assignee_service.py  test_component_service.py  test_config.py  test_crypto_service.py  test_database_service.py  test_epic_service.py  test_issue_type_service.py  test_jira_service.py  test_llm_service.py  test_parse_task_parameters.py  test_search_command.py  test_sprint_service.py  test_users.py
